--- a/Programacion-Web-2025/styles.css
+++ b/Programacion-Web-2025/styles.css
@@ -96,7 +96,7 @@ h1 {
     margin-bottom: 50px;
 }
 
-.bibliography {
+.description {
     background: white;
     border-radius: 15px;
     padding: 30px;
@@ -123,6 +123,7 @@ h2 {
     margin: 10px 0;
     line-height: 1.6;
     color: #2c3e50;
+    word-wrap: break-word; /* Esta funcion es para que el texto se rompa y pase a la siguiente linea en caso de ser muy largo*/
 }
 
 .editable-content:focus {
