--- a/Programacion-Web-2025/styles.css
+++ b/Programacion-Web-2025/styles.css
@@ -134,6 +134,9 @@ h2 {
 .practicas {
     margin-top: 50px;
     text-align: center;
+    background: linear-gradient(135deg, #86bbd8 0%, #86bbd8 100%);
+    border-radius: 15px;
+    padding: 30px;
 }
 
 .selectorDeArchivos {
