--- a/Programacion-Web-2025/styles.css
+++ b/Programacion-Web-2025/styles.css
@@ -151,6 +151,7 @@ h2 {
     max-width: 800px;
     box-shadow: 0 10px 20px rgba(0,0,0,0.1);
     text-align: left;
+    overflow: hidden;
 }
 
 .impresionDeArchivos h3, .impresionDeArchivos h4 {
@@ -163,9 +164,13 @@ h2 {
 }
 
 #iframePractica {
-    width: 100%;
-    height: 400px;
+    width: 100%; /* Mantén el ancho del iframe */
+    height: 400px; /* Ajusta la altura según lo necesario */
     border: 1px solid #ddd;
     border-radius: 8px;
     margin-top: 20px;
+
+    /* Agrega estas propiedades para escalar el contenido */
+    transform: scale(0.8); /* Escala el contenido al 80% */
+    transform-origin: top left; /* Mantén el contenido alineado en la esquina superior izquierda */
 }
