--- a/styles.css
+++ b/styles.css
@@ -13,21 +13,22 @@ nav ul li {
 
 nav ul li a {
   text-decoration: none;
-  color: rgb(0, 103, 147); /* Texto blanco */
+  color: rgb(0, 103, 147);
   font-weight: bold;
   padding: 10px 15px;
   border-radius: 5px;
   transition: background-color 0.3s, color 0.3s;
+  display: block;
 }
 
 nav ul li a:hover {
-  background-color: #005f99, ; /* Naranja */
-  color: #ff8c4e; /*Naranja*/
+  background-color: #005f99;
+  color: #ff8c4e;
 }
 
 nav ul li a.active {
-  background-color: #ffa500; /* Naranja */
-  color: rgb(255, 255, 255); /* Texto blanco */
+  background-color: #ffa500;
+  color: rgb(255, 255, 255);
 }
 
 body {
