--- a/Programacion-Web-2025/styles.css
+++ b/Programacion-Web-2025/styles.css
@@ -1,32 +1,33 @@
 nav ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: center;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: center;
 }
-  
+
 nav ul li {
-    margin: 0 15px;
+  margin: 0 15px;
 }
-  
+
 nav ul li a {
-    text-decoration: none;
-    color: rgb(0, 103, 147); /* Texto blanco */
-    font-weight: bold;
-    padding: 10px 15px;
-    border-radius: 5px;
-    transition: background-color 0.3s, color 0.3s;
+  text-decoration: none;
+  color: rgb(0, 103, 147);
+  font-weight: bold;
+  padding: 10px 15px;
+  border-radius: 5px;
+  transition: background-color 0.3s, color 0.3s;
+  display: block;
 }
-  
+
 nav ul li a:hover {
-    background-color: #005f99, ; /* Naranja */
-    color: #ff8c4e; /*Naranja*/
+  background-color: #005f99;
+  color: #ff8c4e;
 }
-  
+
 nav ul li a.active {
-    background-color: #ffa500; /* Naranja */
-    color: rgb(255, 255, 255); /* Texto blanco */
+  background-color: #ffa500;
+  color: rgb(255, 255, 255);
 }
 
 
